# youtube_summary_py

./: .gitignore  README.md  TRANSCRIPT_CLI_SETUP.md  app.py  audio.py  clipboard-code.sh  config.py  database.py  main.py  prompt.json  prompt.yml  pyproject.toml  pytest.ini  requirements.txt  save_transcript_to_db.py  transcript_viewer.py  transcription.py  urls_to_test.txt  utils.py  youtube.py
docs/: QUEUE_FEATURE_DESIGN.md  QUEUE_TODO.md  README.md  RUN_TESTS.md
scripts/: migrate_database.py  transcript_viewer.py
src/: __init__.py
src/core/: __init__.py  summarization.py  youtube.py
src/queue/: __init__.py  manager.py  processor.py
static/js/: breathing.js  queue.js
templates/: index.html
tests/: README.md  conftest.py  test_app.py  test_database.py  test_summarization.py  test_transcription.py
